--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 ﻿title: Project FrankenServer
 description: Proxmox + pfSense homelab with VLANs, Pi-hole, Home Assistant (sanitized docs & configs).
 remote_theme: just-the-docs/just-the-docs
+plugins:
+  - jekyll-remote-theme
 search_enabled: true
 color_scheme: dark
 aux_links:
-  View on GitHub: https://github.com/Redleg101/Project-FrankenServer
-footer_content: \"© 2025 Anthony Scott Williams — Sanitized documentation\"
+  \"View on GitHub\": https://github.com/Redleg101/Project-FrankenServer
