Pages: move config into docs/ + styled addressing table & buttons

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,4 +6,4 @@ plugins:
 search_enabled: true
 color_scheme: dark
 aux_links:
-  \"View on GitHub\": https://github.com/Redleg101/Project-FrankenServer
+  "View on GitHub": https://github.com/Redleg101/Project-FrankenServer
