Fix index front matter; inject explicit OG/Twitter meta; clean config

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,10 +3,9 @@ description: Proxmox + pfSense homelab with VLANs, Pi-hole, Home Assistant (sani
 remote_theme: just-the-docs/just-the-docs
 plugins:
   - jekyll-remote-theme
-  - jekyll-seo-tag
 search_enabled: true
 color_scheme: dark
 aux_links:
-  "View on GitHub": https://github.com/Redleg101/Project-FrankenServer
+  ""View on GitHub"": https://github.com/Redleg101/Project-FrankenServer
 url: https://redleg101.github.io
 baseurl: /Project-FrankenServer
